# exuberant-hacks

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.txt  TODO  model_c2rs.py  xscreensaver_notes.txt
configs/: exuberantplasma.xml
doc/: exuberantbovines.6.md  exuberantplasma.6.md  xscreensaver_notes.txt  xwindows_refs.txt
extra/: exuberantbovines.xml
original/: model_c2rs.py
src/: cow_face.rs  cow_hide.rs  cow_hoofs.rs  cow_horns.rs  cow_tail.rs  cow_udder.rs  cow_vertex.rs  lib.rs  main.rs  util.rs
